branches/zip: backport r3848 from 6.0 branch

----
    branches/6.0: innobase_start_or_create_for_mysql(): Make the 10 MB
    minimum tablespace limit independent of UNIV_PAGE_SIZE. (Bug #41490)